syntax = "proto3";

option go_package = "passbook/internal/pb;pb";

message VaultParams {
  int32  version            = 1;
  bytes  salt               = 2;
  uint32 time               = 3;
  uint32 memory_kb          = 4;
  uint32 threads            = 5;
  string kdf                = 6;
  string cipher             = 7;
  string master_key_purpose = 8;
  string vault_key_purpose  = 9;
}

message SecretFile {
  int32  version           = 1;
  bytes  salt              = 2;
  uint32 time              = 3;
  uint32 memory_kb         = 4;
  uint32 threads           = 5;
  uint32 key_len           = 6;
  string kdf               = 7;
  string vault_params_hash = 8;
  bytes  commit_nonce      = 9;
  string commit_tag        = 10;
  string created_at        = 11;
  string updated_at        = 12;
  string vault_id          = 13;
  string reserved01        = 14;
  string pin_mode          = 15;
  bytes  pin_key           = 16;
  string pin_verify_tag    = 17;
  string totp_secret       = 18;
}
